--- a/zest_station/partials_v2/pickupKey/zsPickupKeyDispense.html
+++ b/zest_station/partials_v2/pickupKey/zsPickupKeyDispense.html
@@ -2,15 +2,23 @@
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'DISPENSE_KEY_MODE'">
     <div id="content">
         <h1 class="no-margin">{{selectedReservation.first_name}}</h2>
-            <h1 translate>PUK_CHKED_IN_MSG</h1>
+            <h1>
+                <text editable-text="PUK_CHKED_IN_MSG"> {{'PUK_CHKED_IN_MSG' |translate}}</text>
+            </h1>
         <div id="room" ng-show="zestStationData.show_room_number">
             <span class="number">{{selectedReservation.room}}</span>
         </div>
         <div id="keys">
-            <h2 translate>HOW_MANY_KEYS</h2>
+            <h2>
+                <text editable-text="HOW_MANY_KEYS"> {{'HOW_MANY_KEYS' |translate}}</text>
+            </h2>
             <div id="key-options">
-                <button ng-hide="isEmpty('UNO_KEY')" type="button" class="button" touch-press="makeKeys(1)" translate>UNO_KEY</button>
-                <button ng-hide="isEmpty('DOS_KEY')" type="button" class="button" touch-press="makeKeys(2)" translate>DOS_KEY</button>
+                <button ng-hide="isEmpty('UNO_KEY')" type="button" class="button" touch-press="makeKeys(1)">
+                    <text editable-text="UNO_KEY"> {{'UNO_KEY' |translate}}</text>
+                </button>
+                <button ng-hide="isEmpty('DOS_KEY')" type="button" class="button" touch-press="makeKeys(2)">
+                    <text editable-text="DOS_KEY"> {{'DOS_KEY' |translate}}</text>
+                </button>
             </div>
         </div>
     </div>
@@ -20,15 +28,21 @@
 <!---------------------solo key one in progres ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'SOLO_KEY_CREATION_IN_PROGRESS_MODE'">
     <div id="content">
-        <h1 translate>MAKE_KEY</h1>
-        <h2 translate>MAKE_KEY_MSG</h2>
+        <h1>
+            <text editable-text="MAKE_KEY"> {{'MAKE_KEY' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="MAKE_KEY_MSG"> {{'MAKE_KEY_MSG' |translate}}</text>
+        </h2>
         <div class='uploaded-key-image' id="keys" ng-show="zestStationData.keyWriter == 'websocket'">
             <img src="{{icons.url.createkey}}">
         </div>
         <div id="keys" ng-show="icmp">
             <div ng-include="icons.url.createkey_icmp"></div>
         </div>
-        <button ng-show="remoteEncoding  || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(1)">{{'MAKE_KEY_TEXT_ONE' |translate}} </button>
+        <button ng-show="remoteEncoding  || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(1)">
+            <text editable-text="MAKE_KEY_TEXT_ONE"> {{'MAKE_KEY_TEXT_ONE' |translate}}</text>
+        </button>
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" click-touch='resetTime()' ></span>
 </section>
@@ -36,15 +50,21 @@
 <!--------------------- key one in progres ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'KEY_ONE_CREATION_IN_PROGRESS_MODE'">
     <div id="content">
-        <h1 translate>MAKE_FIRST_KEY</h1>
-        <h2 translate>MAKE_FIRST_KEY_SUB</h2>
+        <h1>
+            <text editable-text="MAKE_FIRST_KEY"> {{'MAKE_FIRST_KEY' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="MAKE_FIRST_KEY_SUB"> {{'MAKE_FIRST_KEY_SUB' |translate}}</text>
+        </h2>
         <div class='uploaded-key-image' id="keys" ng-show="zestStationData.keyWriter == 'websocket'">
             <img src="{{icons.url.createkey}}">
         </div>
         <div id="keys" ng-show="icmp">
             <div ng-include="icons.url.createkey_icmp"></div>
         </div>
-          <button ng-show="remoteEncoding  || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(1)">{{'MAKE_KEY_TEXT_ONE' |translate}} </button>
+          <button ng-show="remoteEncoding  || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(1)">
+            <text editable-text="MAKE_KEY_TEXT_ONE"> {{'MAKE_KEY_TEXT_ONE' |translate}}</text>
+        </button>
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" click-touch='resetTime()' ></span>
 </section>
@@ -53,30 +73,42 @@
 <!--------------------- key one success, key two failed------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'KEY_ONE_SUCCESS_KEY_TWO_FAILED'">
     <div id="content">
-        <h1 translate>{{'KEY_TWO_FAILED' |translate}}</h1>
-        <h2 translate>{{'RETRY_CREATING_KEY_TWO' |translate}}</h2>
+        <h1>
+            <text editable-text="KEY_TWO_FAILED"> {{'KEY_TWO_FAILED' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="RETRY_CREATING_KEY_TWO"> {{'RETRY_CREATING_KEY_TWO' |translate}}</text>
+        </h2>
         <div class='uploaded-key-image' id="keys" ng-show="zestStationData.keyWriter == 'websocket'">
             <img src="{{icons.url.createkey}}">
         </div>
         <div id="keys" ng-show="icmp">
             <div ng-include="icons.url.createkey_icmp"></div>
         </div>
-        <button ng-show="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(2)">{{'MAKE_KEY_TEXT_TWO' |translate}} </button>
+        <button ng-show="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(2)">
+            <text editable-text="MAKE_KEY_TEXT_TWO"> {{'MAKE_KEY_TEXT_TWO' |translate}}</text>
+        </button>
     </div>
 </section>
 
 <!--------------------- key one in success ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'KEY_ONE_CREATION_SUCCESS_MODE'">
     <div id="content">
-        <h1 translate>MADE_FIRST_KEY_MSG</h1>
-        <h2 translate>MADE_FIRST_KEY_MSG_SUB</h2>
+        <h1>
+            <text editable-text="MADE_FIRST_KEY_MSG"> {{'MADE_FIRST_KEY_MSG' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="MADE_FIRST_KEY_MSG_SUB"> {{'MADE_FIRST_KEY_MSG_SUB' |translate}}</text>
+        </h2>
         <div class='uploaded-key-image' id="keys" ng-show="zestStationData.keyWriter == 'websocket'">
             <img src="{{icons.url.createkey}}">
         </div>
         <div id="keys" ng-show="icmp">
             <div ng-include="icons.url.createkey_icmp"></div>
         </div>
-        <button ng-show="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(2)">{{'MAKE_KEY_TEXT_TWO' |translate}} </button>
+        <button ng-show="remoteEncoding || localWriter" ng-class="{'overlay disabled':(!readyForUserToPressMakeKey)}" type="button" class="button make-key-now" touch-press="onReadyToPrintKey(2)">
+            <text editable-text="MAKE_KEY_TEXT_TWO"> {{'MAKE_KEY_TEXT_TWO' |translate}}</text>
+        </button>
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" click-touch='resetTime()' ></span>
 </section>
@@ -84,12 +116,18 @@
 <!--------------------- key creation over ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'KEY_CREATION_SUCCESS_MODE'">
     <div id="content">
-        <h1 translate>SUCCESS_HDR</h1>
-        <h2 translate>GRAB_KEYS</h2>
+        <h1>
+            <text editable-text="SUCCESS_HDR"> {{'SUCCESS_HDR' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="GRAB_KEYS"> {{'GRAB_KEYS' |translate}}</text>
+        </h2>
         <div id="room" ng-show="zestStationData.show_room_number">
             <span class="number">{{selectedReservation.room}}</span>
         </div>
-        <button type="button" class="button" click-touch="clickedOnCloseButton()" ng-style="doneButtonStyle" translate>DONE</button>
+        <button type="button" class="button" click-touch="clickedOnCloseButton()" ng-style="doneButtonStyle">
+            <text editable-text="DONE"> {{'DONE' |translate}}</text>
+        </button>
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" click-touch='resetTime()' ></span>
 </section>   
@@ -97,8 +135,12 @@
 <!--------------------- failure ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'DISPENSE_KEY_FAILURE_MODE'">
     <div id="content">
-        <h1 translate>NO_KEYS_MADE</h1>
-        <h2 translate>NO_KEYS_MADE_SUB</h2>
+        <h1>
+            <text editable-text="NO_KEYS_MADE"> {{'NO_KEYS_MADE' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="NO_KEYS_MADE_SUB"> {{'NO_KEYS_MADE_SUB' |translate}}</text>
+        </h2>
         <nav id="options" role="nav">
             <ul role="menu">
                 <!-- retry-key -->
@@ -106,17 +148,25 @@
                     <button type="button" class="button option" touch-press='reEncodeKey()'>
                         <div ng-include="icons.url.key"></div>
                     </button>
-                    <h1 translate>TRY_AGAIN</h1>
+                    <h1>
+                        <text editable-text="TRY_AGAIN"> {{'TRY_AGAIN' |translate}}</text>
+                    </h1>
                 </li>
                 <li class="break">
-                    <span translate>OR_TEXT</span>
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
                 </li>
                 <li> 
                     <button type="button" class="button option" touch-press='talkToStaff()'>
                         <div ng-include="icons.url.staff"></div>
                     </button>
-                    <h1 translate>SPEAK</h1>
-                    <h4 translate>SPEAK_SUB</h4>
+                    <h1>
+                        <text editable-text="SPEAK"> {{'SPEAK' |translate}}</text>
+                    </h1>
+                    <h4>
+                        <text editable-text="SPEAK_SUB"> {{'SPEAK_SUB' |translate}}</text>
+                    </h4>
                 </li>
             </ul>
         </nav>
