--- a/zest_station/partials_v2/zsOutOfService.html
+++ b/zest_station/partials_v2/zsOutOfService.html
@@ -5,7 +5,9 @@
             <div ng-include="icons.url.oos"></div>
         </div>
         
-        <h1>{{'OOS_HEADER' |translate}}</h1>
+        <h1>
+        	<text editable-text="OOS_HEADER"> {{'OOS_HEADER' |translate}}</text>
+    	</h1>
         <h2>{{oos_message_value}}</h2>
     </div>
 <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" ></span>
