--- a/zest_station/partials_v2/zsOwsMsgListing.html
+++ b/zest_station/partials_v2/zsOwsMsgListing.html
@@ -3,7 +3,9 @@
     <!-- Remove class "open" to hide popup content -->
     <div class="popup-content message">
         <!-- Add class "single-message" if there's only 1 message to show. Otherwise add class "message" -->
-        <h2 class="nocaps">{{'OWS_MESSAGE_HEADER' |translate}}</h2>
+        <h2 class="nocaps">
+            <text editable-text="OWS_MESSAGE_HEADER"> {{'OWS_MESSAGE_HEADER' |translate}}</text>
+        </h2>
         <div id="message-content">
             <!-- Logo, for print only -->
             <!-- 
@@ -13,18 +15,26 @@
             <h3> {{currentOwsMessage}}</h3>
             <button type="button" data-action="print" class="button with-icon" touch-press='printOwsMsg()'>
                 <div ng-include="icons.url.print"></div>
-                <span>{{'PRINT' |translate}}</span>
+                <span>
+                    <text editable-text="PRINT"> {{'PRINT' |translate}}</text>
+                </span>
             </button>
             <button type="button" class="button with-icon" touch-press='emailOwsMsg()' ng-show="showEmailButton">
                 <div ng-include="icons.url.email"></div>
-                <span>{{'EMAIL' |translate}}</span>
+                <span>
+                    <text editable-text="EMAIL"> {{'EMAIL' |translate}}</text>
+                </span>
             </button>
         </div>
         <!-- If multiple messages, show: -->
         <div id="message-action">
             <p>Message <strong>{{currentpageNumber}}</strong> of <strong>{{owsMessages.length}}</strong></p>
-            <button ng-show="!isLastOwsMsg" type="button" class="button next" touch-press='loadNextOwsMsg()'>{{'NEXT' |translate}}</button>
-            <button ng-show="isLastOwsMsg" type="button" class="button" touch-press='closePopup()'><span>{{'DONE' |translate}}</span></button>
+            <button ng-show="!isLastOwsMsg" type="button" class="button next" touch-press='loadNextOwsMsg()'>
+                <text editable-text="NEXT"> {{'NEXT' |translate}}</text>
+            </button>
+            <button ng-show="isLastOwsMsg" type="button" class="button" touch-press='closePopup()'><span>
+                <text editable-text="DONE"> {{'DONE' |translate}}</text>
+            </span></button>
         </div>
     </div>
 </div>
